tests/paczka1/small_fuzzy/52896040.err
Error in line 2: ImO S663 40,5
Error in line 4: ImO S280 19,6
Error in line 5: ImO S53 17,3
Error in line 1: 7nEK1d S663 27,9
